Fixing overlap on scrapbook page on Firefox and IE

--- a/app/assets/stylesheets/media/_desktop.css.sass
+++ b/app/assets/stylesheets/media/_desktop.css.sass
@@ -1169,34 +1169,11 @@ a.memory, a.scrapbook
     font-size: 1.5em
     padding: 0 0 1em 0
 
-  #scrapbookContent, #scrapbookInfo
-    float: right
-
   #scrapbookInstructions
     margin-bottom: 3em
     background: rgba($navy-blue, 0.20)
     text-align: center
     width: auto
-
-  .heroContainer
-
-    display: table
-    width: 100%
-    margin-bottom: 1em
-
-    .heroImage
-      margin: 0.5em 0.5em 1em
-      background: white
-      padding: 1em
-      height: 500px
-      text-align: center
-      width: 100%
-      display: table-cell
-      vertical-align: middle
-
-      img
-        vertical-align: middle
-        max-height: 100%
 
   .masonry-grid .masonry
     width: 33.33%
