--- a/app/assets/stylesheets/media/_ipad_portrait_min_768_1.css.sass
+++ b/app/assets/stylesheets/media/_ipad_portrait_min_768_1.css.sass
@@ -18,11 +18,6 @@
         width: 95%
 
 
-#scrapbook
-  #scrapbookContent, #scrapbookInfo
-    float: right !important
-
-
 #password
   #extraPanel
     display: none
