--- a/app/assets/stylesheets/media/_mobiles.css.sass
+++ b/app/assets/stylesheets/media/_mobiles.css.sass
@@ -16,11 +16,6 @@
     .viewingInfo
       position: relative
 
-#scrapbook
-
-  .heroImage
-    height: 250px !important
-
 #editScrapbook
 
   .memory
@@ -41,9 +36,6 @@
         button span.text
         display: none
 
-
-#scrapbook #scrapbookContent, #scrapbook #scrapbookInfo
-  float: none
 
 .desktop
   display: none !important
