--- a/app/assets/stylesheets/media/_small_mobiles.css.sass
+++ b/app/assets/stylesheets/media/_small_mobiles.css.sass
@@ -155,6 +155,3 @@ footer
 
   h2
     text-align: left
-
-  .heroContainer
-    display: none!important
